--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Weather App",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node src/app.js && npm run open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +21,8 @@
     "express": "^4.17.3",
     "hbs": "^4.2.0",
     "request": "^2.88.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
